@@ -1,17 +1,20 @@
 package com.qentelli.employeetrackingsystem.serviceimpl;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import com.qentelli.employeetrackingsystem.entity.PIStanding;
 import com.qentelli.employeetrackingsystem.entity.Project;
 import com.qentelli.employeetrackingsystem.entity.enums.SprintOrdinal;
+import com.qentelli.employeetrackingsystem.entity.enums.Status;
+import com.qentelli.employeetrackingsystem.exception.PIStandingNotFoundException;
 import com.qentelli.employeetrackingsystem.models.client.request.PIStandingRequest;
 import com.qentelli.employeetrackingsystem.models.client.response.PIStandingResponse;
 import com.qentelli.employeetrackingsystem.repository.PIStandingRepository;
@@ -24,6 +27,8 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class PIStandingServiceImpl implements PIStandingService {
 
+	private static final String PI_STANDING_NOT_FOUND = "PI Standing not found with id: ";
+	private static final String INVALID_PI_NUMBER = "piNumber must be between 1 and 4";
 	private final PIStandingRepository repo;
 	private final ProjectRepository projectRepo;
 
@@ -40,7 +45,7 @@ public class PIStandingServiceImpl implements PIStandingService {
 		}
 
 		if (dto.getPiNumber() < 1 || dto.getPiNumber() > 4) {
-			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "piNumber must be between 1 and 4");
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, INVALID_PI_NUMBER);
 		}
 
 		Project project = projectRepo.findById(dto.getProjectId()).orElseThrow(
@@ -53,83 +58,76 @@ public class PIStandingServiceImpl implements PIStandingService {
 		e.setCompletionPercentage(dto.getCompletionPercentage());
 		e.setStatusReport(dto.getStatusReport());
 		e.setSelectedSprints(sprintEnums);
-
+		e.setStatusFlag(Status.ACTIVE);
 		PIStanding saved = repo.save(e);
 		return toResponse(saved);
 	}
 
 	@Override
+	@Transactional
 	public PIStandingResponse update(Long id, PIStandingRequest dto) {
 		PIStanding existing = repo.findById(id)
-				.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Standing not found " + id));
-
+				.orElseThrow(() -> new PIStandingNotFoundException(PI_STANDING_NOT_FOUND + id));
 		List<SprintOrdinal> sprintEnums = mapToSprintOrdinals(dto.getSelectedSprint());
-
 		if (sprintEnums.isEmpty()) {
 			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "At least one sprint must be selected");
 		}
-
 		if (dto.getPiNumber() < 1 || dto.getPiNumber() > 4) {
-			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "piNumber must be between 1 and 4");
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, INVALID_PI_NUMBER);
 		}
-
 		Project project = projectRepo.findById(dto.getProjectId()).orElseThrow(
 				() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Project not found " + dto.getProjectId()));
-
 		existing.setPiNumber(dto.getPiNumber());
 		existing.setProject(project);
 		existing.setFeature(dto.getFeature());
 		existing.setCompletionPercentage(dto.getCompletionPercentage());
 		existing.setStatusReport(dto.getStatusReport());
 		existing.setSelectedSprints(sprintEnums);
-
 		PIStanding saved = repo.save(existing);
 		return toResponse(saved);
 	}
 
 	@Override
 	public PIStandingResponse get(Long id) {
-		PIStanding e = repo.findById(id)
-				.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Standing not found " + id));
+		PIStanding e = repo.findById(id).orElseThrow(() -> new PIStandingNotFoundException(PI_STANDING_NOT_FOUND + id));
 		return toResponse(e);
 	}
 
 	@Override
 	public void delete(Long id) {
-		PIStanding e = repo.findById(id)
-				.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Standing not found " + id));
-		e.setSoftDelete(true);
+		PIStanding e = repo.findById(id).orElseThrow(() -> new PIStandingNotFoundException(PI_STANDING_NOT_FOUND + id));
+		e.setStatusFlag(Status.INACTIVE);
 		repo.save(e);
 	}
 
 	@Override
 	public Page<PIStandingResponse> list(Pageable pg) {
-		return repo.findBySoftDeleteFalse(pg).map(this::toResponse);
+		return repo.findByStatusFlag(Status.ACTIVE, pg).map(this::toResponse);
 	}
 
 	@Override
 	public List<PIStandingResponse> list() {
-		return repo.findBySoftDeleteFalse().stream().map(this::toResponse).collect(Collectors.toList());
+		return repo.findByStatusFlag(Status.ACTIVE).stream().map(this::toResponse).toList();
 	}
 
 	@Override
 	public Page<PIStandingResponse> listByPi(int pi, Pageable pg) {
 		if (pi < 1 || pi > 4) {
-			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "piNumber must be between 1 and 4");
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, INVALID_PI_NUMBER);
 		}
-		return repo.findByPiNumberAndSoftDeleteFalse(pi, pg).map(this::toResponse);
+		return repo.findByPiNumberAndStatusFlag(pi, Status.ACTIVE, pg).map(this::toResponse);
 	}
 
 	@Override
 	public Page<PIStandingResponse> listByProject(int projId, Pageable pg) {
-		return repo.findByProject_ProjectIdAndSoftDeleteFalse(projId, pg).map(this::toResponse);
+		return repo.findByProject_ProjectIdAndStatusFlag(projId, Status.ACTIVE, pg).map(this::toResponse);
 	}
 
 	private PIStandingResponse toResponse(PIStanding e) {
 		List<SprintOrdinal> sprints = e.getSelectedSprints();
 
 		List<String> clientFormattedSprints = sprints.stream().map(s -> s.name().replace("SPRINT_", "Sprint-"))
-				.collect(Collectors.toList());
+				.toList();
 
 		return new PIStandingResponse(e.getId(), e.getPiNumber(), e.getProject().getProjectId(),
 				e.getProject().getProjectName(), e.getFeature(), sprints.contains(SprintOrdinal.SPRINT_0),
@@ -140,14 +138,16 @@ public class PIStandingServiceImpl implements PIStandingService {
 
 	private List<SprintOrdinal> mapToSprintOrdinals(List<String> rawSprints) {
 		if (rawSprints == null)
-			return List.of();
+			return new ArrayList<>();
 
-		return rawSprints.stream().map(s -> {
-			try {
-				return SprintOrdinal.valueOf(s.trim().toUpperCase().replace("-", "_"));
-			} catch (IllegalArgumentException e) {
-				throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid sprint value: " + s);
-			}
-		}).collect(Collectors.toList());
+		return rawSprints.stream()
+			.map(s -> {
+				try {
+					return SprintOrdinal.valueOf(s.trim().toUpperCase().replace("-", "_"));
+				} catch (IllegalArgumentException e) {
+					throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid sprint value: " + s);
+				}
+			})
+			.collect(java.util.stream.Collectors.toCollection(ArrayList::new)); // ✅ mutable
 	}
 }
